--- a/index.css
+++ b/index.css
@@ -5,15 +5,38 @@
 body {
     margin: 0;
     padding: 0;
+    background-color: rgb(204, 231, 247);
+}
+a{
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+    color: white;
 }
 header {
-    background-color: white;
+    background-color: rgb(204, 231, 247);
     min-height: 200px;
     display: flex;
     padding-top:50px;
     font-family: 'Raleway', sans-serif;
     font-size:16px;
     padding-left: 10px;
+}
+.navMenu {
+    display: none;
+}
+ul {
+    padding-top: 0px;
+    list-style-type: none;
+    margin: 0px;
+    margin-top: 0px;
+    align-items: center;
+    background-color: black;
+    color: rgb(204, 231, 247);
+    position: absolute;
+    top: 50px;
+    left: 0;
+
 }
 .web{
     display: block;
@@ -28,7 +51,12 @@ header {
 h2 {
     font-family: 'Rubik', sans-serif;
     font-size: 18px;
-    margin: 0;
+    color: black;
+}
+h3 { 
+    font-family: 'Rubik', sans-serif;
+    font-size: 16px;
+    color: black;
 }
 p {
     font-family: 'Rubiik', sans-serif;
@@ -42,32 +70,36 @@ nav {
     width: 100%;
     min-height: 50px;
     display: flex;
-    text-align: end;
+    text-align: start;
     align-items: center;
+    margin: 0px;
+    padding: 0px;
 }
 .fa-bars {
-    color: orange;
-    
-
-    padding-right: 2%;
+    color: rgb(204, 231, 247);
+    padding-left: 2%;
 }
 .bio {
-    background-color: lightgray;
+    background-color: rgb(204, 231, 247);
     padding-left: 10px;
+    padding-right: 10px;
 }
 .projects {
-    background-color: gray;
+    background-color: rgb(204, 231, 247);
+    color: black;
     padding-left: 10px;
+    padding-right: 20px;
 }
-img {
+.bigScreen {
     height: auto;
     width: 60%;
     padding-right: 10px;
+    float: left;
 }
 footer {
     /* width: 100%; */
     display: flex;
-    background-color: lightgray;
+    background-color: rgb(204, 231, 247);;
     min-height: 50px;
     justify-items: flex-end;
     align-items: center;
@@ -75,15 +107,18 @@ footer {
 .email {
     display: flex;
     justify-content: center;
-    background-color: red;
+    color: black;
 }
 .github {
     display: flex;
     justify-content: center;
-    background-color: yellow;
 } 
 .test {
     display: flex;
     justify-content: center;
     background-color: aqua;
+}
+.git {
+    width: 32px;
+    height: 32px;
 }
