--- a/index.css
+++ b/index.css
@@ -139,11 +139,15 @@ footer {
         float: left;
         width: 60%;
     }
+    .bigGet {
+        float: left;
+        width: 60%;
+    }
     .details {
         display: none;
     }
     .quizHide {
-        display: inline;
+        display: inline-block;
     }
 }
 
